# sourcelab

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/sidecar/: Makefile  main.py  package.json  pyproject.toml
apps/sidecar/models/: __init__.py  elements.py
apps/sidecar/src/sidecar/: main.py  models.py
apps/sidecar/src/sidecar/extractors/: __init__.py  html_url.py  image.py  microsoft.py  pdf.py  plain_text.py  youtube.py
apps/sidecar/tests/extractors/: test_pdf_elements.py  test_plain_text.py  test_youtube.py
apps/web/: drizzle.config.ts  package.json  pnpm-lock.yaml
apps/web/lib/db/: client.ts  schema.ts
apps/web/lib/db/migrations/: 0000_first_maelstrom.sql
apps/web/lib/db/migrations/meta/: 0000_snapshot.json  _journal.json
apps/web/lib/db/repositories/: chunks.ts  conversations.ts  elements.ts  embeddings.ts  index.ts  messages.ts  projects.ts  sources.ts
